<resources>
    <!-- Application information: -->
    <string name="application_name">CV</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- Navigation bar: -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_header_title">My CV</string>
    <string name="navigation_header_subtitle">An easy access to your CV!</string>
    <string name="navigation_header_description">Navigation header</string>
    <!-- Menu items: -->
    <string name="action_settings">Settings</string>
    <string name="menu_about_me">About Me</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_skills">Skills</string>
    <string name="menu_experience">Experience</string>
    <string name="menu_education">Education</string>
</resources>