<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_about_me"
            android:icon="@drawable/icon_menu_person"
            android:title="@string/menu_about_me" />

        <item
            android:id="@+id/navigation_contact"
            android:icon="@drawable/icon_menu_phone"
            android:title="@string/menu_contact" />

        <item
            android:id="@+id/navigation_skills"
            android:icon="@drawable/icon_menu_bar_chart"
            android:title="@string/menu_skills" />

        <item
            android:id="@+id/navigation_experience"
            android:icon="@drawable/icon_menu_work"
            android:title="@string/menu_experience" />

        <item
            android:id="@+id/navigation_education"
            android:icon="@drawable/icon_menu_backpack"
            android:title="@string/menu_education" />

    </group>
</menu>