<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_about_me">

    <fragment
        android:id="@+id/navigation_about_me"
        android:name="com.github.cvandroidapplication.views.AboutMeFragment"
        android:label="@string/menu_about_me"
        tools:layout="@layout/fragment_about_me" />
    <fragment
        android:id="@+id/navigation_contact"
        android:name="com.github.cvandroidapplication.views.ContactFragment"
        android:label="@string/menu_contact"
        tools:layout="@layout/fragment_contact" />
    <fragment
        android:id="@+id/navigation_skills"
        android:name="com.github.cvandroidapplication.views.SkillsFragment"
        android:label="@string/menu_skills"
        tools:layout="@layout/fragment_skills" />
</navigation>